crates/toml/tests/snapshots/invalid/control/multi-cr.stderr
TOML parse error at line 1, column 22
  |
1 | multi-cr   = """null
"""
  |                      ^
carriage return must be followed by newline, expected newline
